--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -46,6 +46,7 @@
         android:text="@string/select_media_video" />
 
     <LinearLayout
+        android:id="@+id/ll_media_buttons"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_margin="10dp"
@@ -56,7 +57,6 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:enabled="false"
             android:onClick="onClickStop"
             android:src="@drawable/stop" />
 
@@ -65,7 +65,6 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:enabled="false"
             android:onClick="onClickFrw"
             android:src="@drawable/frw" />
 
@@ -74,7 +73,6 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:enabled="false"
             android:onClick="onClickPlay"
             android:src="@drawable/play" />
 
@@ -83,7 +81,6 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:enabled="false"
             android:onClick="onClickFfw"
             android:src="@drawable/ffw" />
     </LinearLayout>
